[package]
name = "mechanical-crab"
version = "0.1.0"
authors = ["Robin Schroer <git@sulami.xyz>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mechanical-crab"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
heapless = "0.8"
nom = { version = "5", default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "21342dcace7184f01fdc4e9703b01197bd4b4b4f"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "s"
